--- a/app/index.html
+++ b/app/index.html
@@ -47,9 +47,9 @@
 
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li ><a href="#">Spedition</a></li> <!-- class="active" -->
-            <li><a href="#about">Zahlen &amp; Fakten</a></li>
-            <li><a href="#contact">Kontakt</a></li>
+            <li ><a data-scroll href="#spedition">Spedition</a></li> <!-- class="active" -->
+            <li><a data-scroll href="#zahlen">Zahlen &amp; Fakten</a></li>
+            <li><a data-scroll href="#contact">Kontakt</a></li>
             <li><a class="fb-icon" href="#"><i class="si-square si-facebook"></i></a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -62,11 +62,11 @@
         </figure>
       </div>
 
-      <div class="row row-white">
-        <div class="col-md-4 col-md-offset-1">
+      <div id="spedition" class="row row-white">
+        <div class="col-md-4 col-xs-offset-1">
           <h1>SPEDITION <br/><small class="pad">Unterwegs seit 1950</small></h1>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 col-md-offset-0 col-xs-offset-1 col-xs-10">
           <p>
             Es gibt im Moment in diese Mannschaft, oh, einige Spieler vergessen ihnen Profi was sie sind. Ich lese nicht sehr viele Zeitungen, aber ich habe gehört viele Situationen. Erstens: wir haben nicht offensiv gespielt. Es gibt keine deutsche Mannschaft spielt offensiv und die Name offensiv wie Bayern.
           </p>
@@ -79,8 +79,8 @@
         </div>
       </div>
 
-      <div class="row row-grey">
-        <div class="col-md-10 col-md-offset-1">
+      <div id="zahlen" class="row row-grey">
+        <div class="col-xs-10 col-xs-offset-1">
           <h1>Zahlen &amp; Fakten</h1>
           <h1>3. Generation<br/><small class="pad">Generationen als Familienbetrieb</small></h1>
           <h2>Gründung</h2>
@@ -93,8 +93,8 @@
         </div>
       </div>
 
-      <div class="row row-white">
-        <div class="col-md-5 col-md-offset-1">
+      <div id="contact" class="row row-white">
+        <div class="col-md-5 col-md-offset-1 col-xs-10 col-xs-offset-1">
           <h1>Kontakt</h1>
           <h2>Fritz Gutekunst GmbH + CO.KG</h2>
           <p>
@@ -114,7 +114,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-5">
+        <div class="col-md-5 col-md-offset-0 col-xs-10 col-xs-offset-1">
           <h1>Karte</h1>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1996.71643270622!2d8.72328851080323!3d49.12135603364784!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479798d5c28c29c1%3A0xc0f03462c5d02314!2sFritz+Gutekunst+GmbH+%26+Co.+KG!5e1!3m2!1sde!2sde!4v1445703637335" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
