Some tweaks for mobile view

--- a/app/index.html
+++ b/app/index.html
@@ -62,7 +62,7 @@
         </figure>
       </div>
 
-      <div id="spedition" class="row row-white">
+      <div id="spedition" class="row content-section row-white">
         <div class="col-md-4 col-xs-offset-1">
           <h1>SPEDITION <br/><small class="pad">Unterwegs seit 1950</small></h1>
         </div>
@@ -79,7 +79,7 @@
         </div>
       </div>
 
-      <div id="zahlen" class="row row-grey">
+      <div id="zahlen" class="row content-section row-grey">
         <div class="col-xs-10 col-xs-offset-1">
           <h1>Zahlen &amp; Fakten</h1>
           <h1>3. Generation<br/><small class="pad">Generationen als Familienbetrieb</small></h1>
@@ -93,7 +93,7 @@
         </div>
       </div>
 
-      <div id="contact" class="row row-white">
+      <div id="contact" class="row content-section row-white">
         <div class="col-md-5 col-md-offset-1 col-xs-10 col-xs-offset-1">
           <h1>Kontakt</h1>
           <h2>Fritz Gutekunst GmbH + CO.KG</h2>
