Add proper title Fix smooth scrolling for distribution

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="">
   <head>
     <meta charset="utf-8">
-    <title>takewriteshare</title>
+    <title>Fritz Gutekunst Spedition - unterwegs seit 1950</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -50,7 +50,7 @@
             <li ><a data-scroll href="#spedition">Spedition</a></li> <!-- class="active" -->
             <li><a data-scroll href="#zahlen">Zahlen &amp; Fakten</a></li>
             <li><a data-scroll href="#contact">Kontakt</a></li>
-            <li><a class="fb-icon" href="#"><i class="si-square si-facebook"></i></a></li>
+            <li><a class="fb-icon" href="https://www.facebook.com/FritzGutekunst" target="_blank"><i class="si-square si-facebook"></i></a></li>
           </ul>
         </div><!--/.nav-collapse -->
     </nav>
@@ -127,6 +127,7 @@
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <!-- endbower -->
+    <script src="bower_components/smooth-scroll/dist/js/smooth-scroll.js"></script>
     <!-- endbuild -->
 
 
