Make the whole page full width with a responsive hero image

--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
       <p class="browsehappy">Sie verwenden einen <strong>veralteten</strong> Browser. Bitte <a href="http://browsehappy.com/">aktualisieren sie ihren Browser</a> für eine bessere Darstellung.</p>
     <![endif]-->
 
-    <nav class="navbar navbar-default navbar-static-top container">
+    <nav class="navbar navbar-default navbar-static-top">
         <div class="navbar-header">
 
           <!-- mobile view burger button -->
@@ -54,73 +54,86 @@
           </ul>
         </div><!--/.nav-collapse -->
     </nav>
-    <div class="container">
+
+
       <div class="row">
-        <figure>
+        <div class="hero-image">
+        </div>
+        <!-- <figure>
           <img class="img-responsive" src="images/hero.png" />
           <figcaption>Speditionsgelände aus der Luft</figcaption>
-        </figure>
+        </figure> -->
       </div>
+    
 
-      <div id="spedition" class="row content-section row-white">
-        <div class="col-md-4 col-xs-offset-1">
-          <h1>SPEDITION <br/><small class="pad">Unterwegs seit 1950</small></h1>
-        </div>
-        <div class="col-md-6 col-md-offset-0 col-xs-offset-1 col-xs-10">
-          <p>
-            Es gibt im Moment in diese Mannschaft, oh, einige Spieler vergessen ihnen Profi was sie sind. Ich lese nicht sehr viele Zeitungen, aber ich habe gehört viele Situationen. Erstens: wir haben nicht offensiv gespielt. Es gibt keine deutsche Mannschaft spielt offensiv und die Name offensiv wie Bayern.
-          </p>
-          <p>
-            Letzte Spiel hatten wir in Platz drei Spitzen: Elber, Jancka und dann Zickler. Wir müssen nicht vergessen Zickler. Zickler ist eine Spitzen mehr, Mehmet eh mehr Basler. Ist klar diese Wörter, ist möglich verstehen, was ich hab gesagt? Danke. Offensiv, offensiv ist wie machen wir in Platz.
-          </p>
-          <p>
-            Zweitens: ich habe erklärt mit diese zwei Spielert: nach Dortmund brauchen vielleicht Halbzeit Pause. Ich habe auch andere Mannschaften gesehen in Europa nach diese Mittwoch. Ich habe gesehen auch zwei Tage die Training. Ein Trainer ist nicht ein Idiot! Ein Trainer sei sehen was passieren in Platz. In diese Spiel es waren zwei, drei diese Spieler waren schwach wie eine Flasche leer! Haben Sie gesehen Mittwoch, welche Mannschaft hat gespielt Mittwoch? Hat gespielt Mehmet oder gespielt Basler oder hat gespielt Trapattoni? Diese Spieler beklagen mehr als sie spielen! Wissen Sie, warum die Italienmannschaften
-          </p>
-        </div>
-      </div>
-
-      <div id="zahlen" class="row content-section row-grey">
-        <div class="col-xs-10 col-xs-offset-1">
-          <h1>Zahlen &amp; Fakten</h1>
-          <h1>3. Generation<br/><small class="pad">Generationen als Familienbetrieb</small></h1>
-          <h2>Gründung</h2>
-          <h2>Nutzlast</h2>
-          <h2>KM im Jahr 2014</h2>
-          <h2>Mitarbeiter</h2>
-          <h2>QM Lagerfläche</h2>
-          <h2>Standorte</h2>
-          <h2>Ø Betriebszugehörigkeit</h2>
+    <div class="row-white">
+      <div id="spedition" class="content-section container">
+        <div class="row">
+          <div class="col-md-4 col-xs-offset-1">
+            <h1>SPEDITION <br/><small class="pad">Unterwegs seit 1950</small></h1>
+          </div>
+          <div class="col-md-6 col-md-offset-0 col-xs-offset-1 col-xs-10">
+            <p>
+              Es gibt im Moment in diese Mannschaft, oh, einige Spieler vergessen ihnen Profi was sie sind. Ich lese nicht sehr viele Zeitungen, aber ich habe gehört viele Situationen. Erstens: wir haben nicht offensiv gespielt. Es gibt keine deutsche Mannschaft spielt offensiv und die Name offensiv wie Bayern.
+            </p>
+            <p>
+              Letzte Spiel hatten wir in Platz drei Spitzen: Elber, Jancka und dann Zickler. Wir müssen nicht vergessen Zickler. Zickler ist eine Spitzen mehr, Mehmet eh mehr Basler. Ist klar diese Wörter, ist möglich verstehen, was ich hab gesagt? Danke. Offensiv, offensiv ist wie machen wir in Platz.
+            </p>
+            <p>
+              Zweitens: ich habe erklärt mit diese zwei Spielert: nach Dortmund brauchen vielleicht Halbzeit Pause. Ich habe auch andere Mannschaften gesehen in Europa nach diese Mittwoch. Ich habe gesehen auch zwei Tage die Training. Ein Trainer ist nicht ein Idiot! Ein Trainer sei sehen was passieren in Platz. In diese Spiel es waren zwei, drei diese Spieler waren schwach wie eine Flasche leer! Haben Sie gesehen Mittwoch, welche Mannschaft hat gespielt Mittwoch? Hat gespielt Mehmet oder gespielt Basler oder hat gespielt Trapattoni? Diese Spieler beklagen mehr als sie spielen! Wissen Sie, warum die Italienmannschaften
+            </p>
+          </div>
         </div>
       </div>
+    </div>
 
-      <div id="contact" class="row content-section row-white">
-        <div class="col-md-5 col-md-offset-1 col-xs-10 col-xs-offset-1">
-          <h1>Kontakt</h1>
-          <h2>Fritz Gutekunst GmbH + CO.KG</h2>
-          <p>
-            An der Kraich2, 76703 Kraichtal<br/>
-            T: 07250 92 77 0-0<br/>
-            F: 07250 92 77 0-26</p>
-          <p>info@gutekunst-spedition.de</p>
-          <p>Folgen Sie uns auf <a href="#">facebook.com/fritzgutekunst</a></p>
+    <div class="row-grey">
+      <div class="container content-section">
+        <div id="zahlen" class="row">
+          <div class="col-xs-10 col-xs-offset-1">
+            <h1>Zahlen &amp; Fakten</h1>
+            <h1>3. Generation<br/><small class="pad">Generationen als Familienbetrieb</small></h1>
+            <h2>Gründung</h2>
+            <h2>Nutzlast</h2>
+            <h2>KM im Jahr 2014</h2>
+            <h2>Mitarbeiter</h2>
+            <h2>QM Lagerfläche</h2>
+            <h2>Standorte</h2>
+            <h2>Ø Betriebszugehörigkeit</h2>
+          </div>
+        </div>
+      </div>
 
-          <h2 style="padding-top: 50px;">Ansprechpartner</h2>
+      <div class="row-white">
+        <div id="contact" class="content-section container">
           <div class="row">
-            <div class="col-xs-6">
-              <p>Stefan Gutekunst<br/>Geschäftsführung</p>
+            <div class="col-md-5 col-md-offset-1 col-xs-10 col-xs-offset-1">
+              <h1>Kontakt</h1>
+              <h2>Fritz Gutekunst GmbH + CO.KG</h2>
+              <p>
+                An der Kraich2, 76703 Kraichtal<br/>
+                T: 07250 92 77 0-0<br/>
+                F: 07250 92 77 0-26</p>
+              <p>info@gutekunst-spedition.de</p>
+              <p>Folgen Sie uns auf <a href="#">facebook.com/fritzgutekunst</a></p>
+
+              <h2 style="padding-top: 50px;">Ansprechpartner</h2>
+              <div class="row">
+                <div class="col-xs-6">
+                  <p>Stefan Gutekunst<br/>Geschäftsführung</p>
+                </div>
+                <div class="col-xs-6">
+                  <p>Stefan Gutekunst<br/>Disponent</p>
+                </div>
+              </div>
             </div>
-            <div class="col-xs-6">
-              <p>Stefan Gutekunst<br/>Disponent</p>
+            <div class="col-md-5 col-md-offset-0 col-xs-10 col-xs-offset-1">
+              <h1>Karte</h1>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1996.71643270622!2d8.72328851080323!3d49.12135603364784!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479798d5c28c29c1%3A0xc0f03462c5d02314!2sFritz+Gutekunst+GmbH+%26+Co.+KG!5e1!3m2!1sde!2sde!4v1445703637335" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
           </div>
         </div>
-        <div class="col-md-5 col-md-offset-0 col-xs-10 col-xs-offset-1">
-          <h1>Karte</h1>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1996.71643270622!2d8.72328851080323!3d49.12135603364784!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479798d5c28c29c1%3A0xc0f03462c5d02314!2sFritz+Gutekunst+GmbH+%26+Co.+KG!5e1!3m2!1sde!2sde!4v1445703637335" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-        </div>
       </div>
-
-
     </div>
 
     <!-- build:js(.) scripts/vendor.js -->
