Implement facts section

--- a/app/index.html
+++ b/app/index.html
@@ -56,21 +56,21 @@
     </nav>
 
 
-      <div class="row">
-        <div class="hero-image">
-        </div>
+
+        <div class="hero-image"></div>
+
         <!-- <figure>
           <img class="img-responsive" src="images/hero.png" />
           <figcaption>Speditionsgelände aus der Luft</figcaption>
         </figure> -->
-      </div>
-    
+
+
 
     <div class="row-white">
       <div id="spedition" class="content-section container">
         <div class="row">
           <div class="col-md-4 col-xs-offset-1">
-            <h1>SPEDITION <br/><small class="pad">Unterwegs seit 1950</small></h1>
+            <h1 class="text-indented">Spedition<br/><small>Unterwegs seit 1950</small></h1>
           </div>
           <div class="col-md-6 col-md-offset-0 col-xs-offset-1 col-xs-10">
             <p>
@@ -88,20 +88,65 @@
     </div>
 
     <div class="row-grey">
-      <div class="container content-section">
-        <div id="zahlen" class="row">
-          <div class="col-xs-10 col-xs-offset-1">
-            <h1>Zahlen &amp; Fakten</h1>
-            <h1>3. Generation<br/><small class="pad">Generationen als Familienbetrieb</small></h1>
-            <h2>Gründung</h2>
-            <h2>Nutzlast</h2>
-            <h2>KM im Jahr 2014</h2>
-            <h2>Mitarbeiter</h2>
-            <h2>QM Lagerfläche</h2>
-            <h2>Standorte</h2>
-            <h2>Ø Betriebszugehörigkeit</h2>
+      <div id="zahlen" class="content-section container">
+
+        <div class="col-md-4 col-md-push-4 text-center fact">
+          <div class="col-centered-auto text-left">
+            <h1 class="text-indented">Zahlen<br/>und Fakten</h1>
           </div>
         </div>
+
+        <div class="col-md-3 col-xs-10 col-xs-offset-1 col-md-pull-4 text-center fact">
+          <div class="col-centered-auto text-left">
+            <ul class="facts">
+              <li><span class="fact-number">55</span> Mitarbeiter</li>
+              <li><span class="fact-number">4</span> Auszubildende</li>
+              <li class="line"></li>
+              <li><span class="fact-number">11</span> Jahre durchschnittliche Betriebszugehörigkeit</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="col-md-3 col-xs-10 col-xs-offset-1 text-center fact">
+          <div class="col-centered-auto globe text-indented">
+            <span class="fact-number">3.826.987</span><br/>km unterwegs in 2014
+          </div>
+        </div>
+
+        <div class="col-md-4 col-xs-10 col-xs-offset-1 text-center fact">
+          <div class="col-centered-auto locations text-left">
+            <span class="fact-number">Standorte</span><br/>
+            Kraichtal-Münzesheim, Ba-Wü,<br/>
+            Heldrungen, Thüringen
+          </div>
+        </div>
+
+        <div class="col-md-3 col-xs-10 col-xs-offset-1 text-center fact">
+          <div class="col-centered-auto generations text-indented">
+            In <span class="fact-number">3.</span> Generation<br/>Familienbetrieb
+          </div>
+        </div>
+
+        <div class="col-md-3 col-xs-10 col-xs-offset-1 col-md-offset-0 text-center fact">
+          <div class="col-centered-auto cap text-indented">
+            <span class="fact-number">42</span> Lastfahrzeuge<br/>Nutzlast bis 8 Tonnen
+          </div>
+        </div>
+
+        <div class="col-md-3 col-md-offset-7 col-xs-10 col-xs-offset-1 text-center fact">
+          <div class="col-centered-auto storage text-indented">
+            <span class="fact-number">900 m&sup2;</span><br/>beheizte Lagerfläche
+          </div>
+        </div>
+
+
+
+
+        <!-- <div  class="row text-center">
+          <div class="col-centered-auto text-left">
+            <h1 class="text-indented">Zahlen<br/>und Fakten</h1>
+          </div>
+        </div> -->
       </div>
 
       <div class="row-white">
