Improve mobile view of facts section

--- a/app/index.html
+++ b/app/index.html
@@ -91,14 +91,14 @@
       <div id="zahlen" class="content-section container">
 
         <div class="col-md-4 col-md-push-4 text-center fact">
-          <div class="col-centered-auto text-left">
+          <div class="col-centered-auto text-left zahlen-headline">
             <h1 class="text-indented">Zahlen<br/>und Fakten</h1>
           </div>
         </div>
 
         <div class="col-md-3 col-xs-10 col-xs-offset-1 col-md-pull-4 text-center fact">
-          <div class="col-centered-auto text-left">
-            <ul class="facts">
+          <div class="facts col-centered-auto text-left">
+            <ul>
               <li><span class="fact-number">55</span> Mitarbeiter</li>
               <li><span class="fact-number">4</span> Auszubildende</li>
               <li class="line"></li>
@@ -108,7 +108,7 @@
         </div>
 
         <div class="col-md-3 col-xs-10 col-xs-offset-1 text-center fact">
-          <div class="col-centered-auto globe text-indented">
+          <div class="col-centered-auto globe">
             <span class="fact-number">3.826.987</span><br/>km unterwegs in 2014
           </div>
         </div>
@@ -122,7 +122,7 @@
         </div>
 
         <div class="col-md-3 col-xs-10 col-xs-offset-1 text-center fact">
-          <div class="col-centered-auto generations text-indented">
+          <div class="generations col-centered-auto">
             In <span class="fact-number">3.</span> Generation<br/>Familienbetrieb
           </div>
         </div>
@@ -134,19 +134,10 @@
         </div>
 
         <div class="col-md-3 col-md-offset-7 col-xs-10 col-xs-offset-1 text-center fact">
-          <div class="col-centered-auto storage text-indented">
+          <div class="col-centered-auto storage">
             <span class="fact-number">900 m&sup2;</span><br/>beheizte Lagerfläche
           </div>
         </div>
-
-
-
-
-        <!-- <div  class="row text-center">
-          <div class="col-centered-auto text-left">
-            <h1 class="text-indented">Zahlen<br/>und Fakten</h1>
-          </div>
-        </div> -->
       </div>
 
       <div class="row-white">
