Anpassung an DSGVO

--- a/app/index.html
+++ b/app/index.html
@@ -61,15 +61,34 @@
           <div class="col-md-4 col-xs-offset-1">
             <h2 class="text-indented">Spedition<br/><small>Unterwegs seit 1950</small></h1>
           </div>
+
           <div class="col-md-6 col-md-offset-0 col-xs-offset-1 col-xs-10">
             <p>
-              Es gibt im Moment in diese Mannschaft, oh, einige Spieler vergessen ihnen Profi was sie sind. Ich lese nicht sehr viele Zeitungen, aber ich habe gehört viele Situationen. Erstens: wir haben nicht offensiv gespielt. Es gibt keine deutsche Mannschaft spielt offensiv und die Name offensiv wie Bayern.
+              Dem Sprichwort „In Vaters Fußstapfen treten“ werden der Sohn und die Enkel des Firmengründers Fritz Gutekunst mehr als gerecht, denn das Familienunternehmen wird nun bereits in der 3. Generation souverän geführt.
             </p>
             <p>
-              Letzte Spiel hatten wir in Platz drei Spitzen: Elber, Jancka und dann Zickler. Wir müssen nicht vergessen Zickler. Zickler ist eine Spitzen mehr, Mehmet eh mehr Basler. Ist klar diese Wörter, ist möglich verstehen, was ich hab gesagt? Danke. Offensiv, offensiv ist wie machen wir in Platz.
+              Gegründet im Jahr 1950 in Bösingen im Schwarzwald zog Fritz Gutekunst bereits nach fünf Jahren nach Neulingen-Nußbaum und legte somit den Grundstein für eine strategisch günstige Ausgangslage.
             </p>
             <p>
-              Zweitens: ich habe erklärt mit diese zwei Spielert: nach Dortmund brauchen vielleicht Halbzeit Pause. Ich habe auch andere Mannschaften gesehen in Europa nach diese Mittwoch. Ich habe gesehen auch zwei Tage die Training. Ein Trainer ist nicht ein Idiot! Ein Trainer sei sehen was passieren in Platz. In diese Spiel es waren zwei, drei diese Spieler waren schwach wie eine Flasche leer! Haben Sie gesehen Mittwoch, welche Mannschaft hat gespielt Mittwoch? Hat gespielt Mehmet oder gespielt Basler oder hat gespielt Trapattoni? Diese Spieler beklagen mehr als sie spielen! Wissen Sie, warum die Italienmannschaften
+              Der Fuhrpark wuchs somit auch vom ersten LKW, der Produkte aus dem Schwarzwald an den Bodensee transportierte und im Gegenzug Obst und Gemüse mit in den Schwarzwald nahm, bis auf über 20 LKW an, die inzwischen alle Arten von Gütern beförderten.
+            </p>
+            <p>
+              1981 zog die Spedition noch unter Führung von Fritz Gutekunst, aber bereits unter Mitarbeit seines Sohnes Roland, nach Kraichtal-Münzesheim, da sich die Spedition hier auch in Hinblick auf das Firmengelände vergrößern konnte.
+            </p>
+            <p>
+              Mit der Einführung des Wechselbrückensystems 1985 brachte der künftige Firmenleiter Roland Gutekunst eine zukunftsweisende Neuerung in das Speditionsgeschäft, welche große Vorteile in Bezug auf Flexibilität und Zeitmanagement in den Speditionsalltag brachte.
+            </p>
+            <p>
+              Im Jahr 1988 übergab der Gründer Fritz Gutekunst das Unternehmen an seinen Sohn Roland, der Spedition von nun an mit großem Einsatz vorantrieb und den Fuhrpark auf über 40 LKW erweiterte..
+            </p>
+            <p>
+              2002 leitete Roland Gutekunst, aufgrund der Mauteinführung für schwere LKW, die Einführung sowie die hauseigene Produktion von Leichtwechselbrücken ein, ein neues System, das es damals erlaubte sich mautfrei im deutschen Straßenverkehr zu bewegen. Bereits im darauffolgenden Jahr expandierte die Spedition indem ein neuer Standort, dieses Mal in Thüringen (Heldrungen) eröffnet wurde. Von nun an gingen die Leichtbrücken, unter Leitung von Thomas Schulz in Serienproduktion.
+            </p>
+            <p>
+              Auch in den kommenden Jahren führt Roland Gutekunst das Familienunternehmen in visionärem Stil. Wie bereits sein Vater, hält es auch Roland Gutekunst seinen Söhnen offen, auch in seine Fußstapfen zu treten. Die Söhne Stefan und Peter nehmen 2009 die Arbeit in der familieneigenen Firma auf.
+            </p>
+            <p>
+              Seit 2013 treten nun auch Stefan und Peter Gutekunst, wie einst auch Roland Gutekunst, in „die Fußstapfen ihres Vaters“ und führen die traditionsreiche Spedition nun in der dritten Generation fort.
             </p>
           </div>
         </div>
@@ -129,6 +148,11 @@
         </div>
       </div>
     </div>
+    
+
+
+
+
     <div class="row-white">
       <div id="contact" class="content-section container">
         <div class="row">
@@ -140,52 +164,56 @@
           <div class="col-sm-4">
             <h3 class="marginBottom30">Kraichtal</h3>
             <h4>Fritz Gutekunst GmbH + Co. KG</h4>
-            <p>T: 07250 92 77 0-0<br/>
-            F: 07250 92 77 0-26</p>
+            <p>An der Kraich 2<br> 76703 Kraichtal</p>
+            <p>T: 07250 92 77 0-0<br> F: 07250 92 77 0-26</p>
           </div>
           <div class="col-sm-4">
             <h3 class="marginBottom30">Heldrungen</h3>
             <h4>Fritz Gutekunst GmbH + Co. KG</h4>
-            <p>T: 07250 92 77 0-0<br/>
-            F: 07250 92 77 0-26</p>
-          </div>
-          <div class="col-sm-4 management">
-            <h4 class="marginBottom30">Geschäftsführung</h4>
-            <h4>Peter Gutekunst</h4>
-            <p>T: 07250 92 77 0-0</p>
-            <h4>Stefan Gutekunst</h4>
-            <p>T: 07250 92 77 0-0</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-8">
-            <div class="row">
-              <div class="col-sm-4">
-                <h4>Abrechnung</h4>
-                <p>T: 07250 92 77 0-0</p>
-              </div>
-              <div class="col-sm-4">
-                <h4>Disposition</h4>
-                <p>T: 07250 92 77 0-0</p>
-              </div>
-              <div class="col-sm-4">
-                <h4>Werkstattleitung</h4>
-                <p>T: 07250 92 77 0-0</p>
-              </div>
-            </div>
+            <p>An der Schmücke 9<br> 06577 Heldrungen</p>
+            <p>T: 034673 77 411<br> F: 034673 77 412</p>
           </div>
           <div class="col-sm-4 fbhint">
-            <p>Folgen sie uns auf<br/>
-            <a href="#">facebook.com/fritzgutekunst</a></p>
+            <p>
+              Schreiben sie uns an<br/> <a href="mailto:info@gutekunst-spedition.de">info@gutekunst-spedition.de</a>
+            </p>
+            <p>
+              Folgen sie uns auf<br/> <a href="https://www.facebook.com/FritzGutekunst">facebook.com/fritzgutekunst</a>
+            </p>
           </div>
-        </div>
-        <div class="row">
-          <figure>
-            <img class="img-responsive" src="images/belegschaft.png" />
-          </figure>
         </div>
       </div>
     </div>
+    <div class="row-grey">
+      <div id="imprint" class="content-section container">
+        <div class="row">
+          <div class="col-sm-12">
+            <h2 class="marginBottom30">Impressum</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6 col-sm-12">
+            <h3>Angaben gemäß § 5 TMG:</h3>
+            <p>Fritz Gutekunste GmbH &amp; Co. KG</p>
+            <p>An der Kraich 2</p>
+            <p>76703 Kraichtal</p>
+            <h3>Vertreten durch</h3>
+            <p>Roland Gutekunst GmbH, Geschäftsführer Peter &amp; Stefan Gutekunst</p>
+            <h3>Datenschutz</h3>
+            <a href="/datenschutz.html">Datenschutzerklärung</a>
+          </div>
+          <div class="col-md-6 col-sm-12">
+            <h3>Registereintrag</h3>
+            <p>Eintragung im Handelsregister.</p>
+            <p>Registergericht: Mannheim</p>
+            <p>Registernummer: 231223</p>
+            <h3>Umsatzsteuer-ID:</h3>
+            <p>Umsatzsteuer-Identifikationsnummer gemäß §27 a Umsatzsteuergesetz: DE143073681</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
@@ -214,14 +242,5 @@
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <script>
-      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-      e.src='https://www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-XXXXX-X');ga('send','pageview');
-    </script>
   </body>
 </html>
